[tool.poetry]
name = "xiaoxia"
version = "0.1.0"
description = ""
authors = ["effi425xiao <xiaozhang.uh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.1.9"
python-dotenv = "^1.0.1"
langchain-openai = "^0.0.8"
chainlit = "^1.0.301"
pytz = "^2024.1"
pinecone-client = "^3.1.0"
langchain-pinecone = "^0.0.3"
langchainhub = "^0.1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
